# ml-from-scratch

./: AGENTS.md  DAILY_SUMMARY.md  NOTE.md  README.md  main.py  pyproject.toml
01_knn/: README.md  california_housing.py  demo.py  distance.py  iris_analysis.py  model.py  test_knn.py  util.py
02_linear_regression/: demo.py  linear_regression.py
03_logistic_regression/: README.md  demo.py  logistic_regression.py
04_decision_tree/: README.md  decision_tree_classifier.py  decision_tree_regression.py
05_naive_bayes/: naive_bayes.py
06_kmeans/: kmeans.py
07_pca/: pca.py
08_adaboost/: README.md
09_adaboost/: adaboost.py
10_gbdt/: gbdt.py  regression_analysis.py
10_xgboost/: README.md
11_xgboost/: xgboost.py  xgboost_tree.py
datasets/: README.md  california_housing_sample.csv
decision_tree/: decision_tree_classifier.py  demo.py  titanic.py  titanic_submission.csv
gbdt/: README.md
kmeans/: README.md
knn/: README.md  california_housing.py  demo.py  iris_analysis.py  knn.py
linear_regression/: README.md  demo.py
logistic_regression/: demo.py  logistic_regression.py
naive_bayes/: README.md
neural_network/: README.md
pca/: README.md
utils/: README.md  __init__.py  base_estimator.py  metrics.py  min_max_scaler.py  model_selection.py  standard_scaler.py  train_test_split.py
